--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
